plugins {
    id 'java'
    id 'java-library'
    id 'org.springframework.boot' version '2.7.6'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    set('springCloudVersion', "2021.0.5")
}

dependencyManagement {
    repositories {
        mavenLocal()
        gradlePluginPortal()
        maven {
            url 'https://repo.spring.io/release'
        }
    }

    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

dependencies {
    implementation 'org.camunda.bpm.springboot:camunda-bpm-spring-boot-starter:7.18.0'
    implementation 'org.camunda.bpm.springboot:camunda-bpm-spring-boot-starter-webapp:7.18.0'
    implementation 'org.camunda.bpm.dmn:camunda-engine-dmn-bom:7.18.0'
    implementation 'org.camunda.bpm.springboot:camunda-bpm-spring-boot-starter-rest:7.18.0'

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springdoc:springdoc-openapi-ui:1.6.6'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-security'

    implementation 'org.springframework.session:spring-session-core'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure'

    implementation "net.logstash.logback:logstash-logback-encoder:7.1.1"
    implementation 'org.slf4j:log4j-over-slf4j:2.0.7'
    implementation "co.elastic.apm:apm-agent-attach:1.30.1"
    implementation "co.elastic.logging:logback-ecs-encoder:1.3.2"

    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'com.sun.xml.bind:jaxb-impl:2.2.3'

    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'com.google.code.gson:gson:2.10.1'
    testImplementation 'org.projectlombok:lombok:1.18.22'
}

tasks.named('test') {
    useJUnitPlatform()
}

bootRun {
    jvmArgs = ["-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8659", "--add-opens=java.base/java.lang=ALL-UNNAMED"]
}